--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -278,23 +278,27 @@ ConnectionsManager.Connection.invalidURI = Impossible de se connecter à {0}.\n\
 ConnectionsManager.Connection.alreadyCreating = Une connection vers {0} est déjà en train d'être établie. Merci de patienter quelques secondes.
 ConnectionsManager.Connection.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 ConnectionsManager.Connection.connectedTo = Connecté à {0}.
-ConnectionsManager.Connection.logout = Se déconnecter
-ConnectionsManager.Connection.logoutConfirmation = Se déconnecter? Cela fermera également la connection au serveur.
 ConnectionsManager.Connection.removeClient = Supprimer
 ConnectionsManager.Connection.closeImages = Vous devez d'abord fermer les images de ce serveur!
-ConnectionsManager.Connection.loginToServer = Se connecter au serveur
-ConnectionsManager.Connection.loginFailed = Impossible de se connecter au serveur. Consultez les logs pour plus d'informations.
 ConnectionsManager.Connection.removeClientConfirmation = Ce serveur sera supprimé de la liste des serveurs actifs.
 ConnectionsManager.Connection.disconnectClient = Se déconnecter du serveur
 ConnectionsManager.Connection.disconnectClientConfirmation = La connection va être stoppée.
 ConnectionsManager.Connection.image = image
 ConnectionsManager.Connection.images = images
 ConnectionsManager.Connection.browse = Parcourir
+ConnectionsManager.Connection.browseDescription = Parcourir les fichiers de ce serveur
 ConnectionsManager.Connection.login = S'authentifier
+ConnectionsManager.Connection.loginDescription = Tente de s'authentifier à ce serveur
 ConnectionsManager.Connection.connect = Se connecter
+ConnectionsManager.Connection.connectDescription = Tente de se connecter à ce serveur
 ConnectionsManager.Connection.disconnect = Se déconnecter
+ConnectionsManager.Connection.disconnectDescription = Se déconnecter de ce serveur
+ConnectionsManager.Connection.removeDescription = Se déconnecter de ce serveur et le supprimer de cette liste
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Connexion réussie: {0} ("{1}")
+
+ConnectionsManager.NewConnectionOptions.title = Nouvelle connection
+ConnectionsManager.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
 
 ConnectionsManager.ConnectionManager.noClients = Aucun client
 ConnectionsManager.ConnectionManager.webClients = Clients Web
