Prompt user to skip authentication when opening browser

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -105,6 +105,9 @@ Browser.BrowserCommand.alreadyCreating = Une connection vers {0} est déjà en t
 Browser.BrowserCommand.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 Browser.BrowserCommand.webServer = Serveur web
 
+Browser.NewConnectionOptions.title = Nouvelle connection
+Browser.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
+
 Browser.ServerBrowser.omeroWebServer = Serveur web OMERO
 Browser.ServerBrowser.server = Serveur:
 Browser.ServerBrowser.username = Nom d'utilisateur:
