--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -292,6 +292,8 @@ ConnectionsManager.Connection.browse = Parcourir
 ConnectionsManager.Connection.browseDescription = Parcourir les fichiers de ce serveur
 ConnectionsManager.Connection.login = S'authentifier
 ConnectionsManager.Connection.loginDescription = Tente de s'authentifier à ce serveur
+ConnectionsManager.Connection.logout = Se déconnecter du compte actuel
+ConnectionsManager.Connection.logoutDescription = Se déconnecter du compte actuel et essayer de créer une connexion non authentifiée à ce serveur
 ConnectionsManager.Connection.connect = Se connecter
 ConnectionsManager.Connection.connectDescription = Tente de se connecter à ce serveur
 ConnectionsManager.Connection.disconnect = Se déconnecter
@@ -299,6 +301,8 @@ ConnectionsManager.Connection.disconnectDescription = Se déconnecter de ce serv
 ConnectionsManager.Connection.removeDescription = Se déconnecter de ce serveur et le supprimer de cette liste
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Connexion réussie: {0} ("{1}")
+ConnectionsManager.Connection.logoutSuccessful = Déconnection du compte actuel réussie
+ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Déconnection du compte actuel réussie, mais la création d'une connexion non authentifiée à ce serveur a échoué
 
 ConnectionsManager.NewConnectionOptions.title = Nouvelle connection
 ConnectionsManager.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
