Added login logout buttons to browser

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -111,6 +111,14 @@ Browser.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'aut
 Browser.ServerBrowser.omeroWebServer = Serveur web OMERO
 Browser.ServerBrowser.server = Serveur:
 Browser.ServerBrowser.username = Nom d'utilisateur:
+Browser.ServerBrowser.unauthenticated = Non authentifié
+Browser.ServerBrowser.login = S'authentifier
+Browser.ServerBrowser.loginDescription = Tente de s'authentifier à ce serveur
+Browser.ServerBrowser.loginSuccessful = Authentification réussie : {0} ("{1}")
+Browser.ServerBrowser.loginFailed = L'authentification a échouée.
+Browser.ServerBrowser.logout = Se déconnecter du compte actuel
+Browser.ServerBrowser.logoutDescription = Se déconnecter du compte actuel et essayer de créer une connexion non authentifiée à ce serveur
+Browser.ServerBrowser.logoutSuccessful = Déconnection du compte actuel réussie
 Browser.ServerBrowser.openedImages = Images ouvertes:
 Browser.ServerBrowser.pixelAPI = Pixel API:
 Browser.ServerBrowser.accessRawPixels = Accès aux valeurs brutes des pixels
@@ -121,7 +129,6 @@ Browser.ServerBrowser.entitiesLoadedBackground = Des entités sont chargées en 
 Browser.ServerBrowser.orphanedImagesLoadedBackground = Les images orphelines sont chargées en arrière-plan...
 Browser.ServerBrowser.loadingThumbnails = Chargement des miniatures...
 Browser.ServerBrowser.thumbnailsLoadedBackground = Des miniatures sont chargées en arrière-plan...
-Browser.ServerBrowser.filterByGroupAndOwner = Filtrer par groupe et propriétaire
 Browser.ServerBrowser.moreInfo = Plus d'informations...
 Browser.ServerBrowser.openInBrowser = Ouvrir dans le navigateur
 Browser.ServerBrowser.copyToClipboard = Copier dans le presse-papier
