Added omero server address in settings window

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -154,6 +154,8 @@ Browser.ServerBrowser.Settings.mxPixelBufferAPIPort = Ms Pixel Buffer API port
 Browser.ServerBrowser.Settings.mxPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer (8082 par défaut).
 Browser.ServerBrowser.Settings.webJpegQuality =  Qualité JPEG de la Web pixel API
 Browser.ServerBrowser.Settings.webJpegQualityDescription = La qualité JPEG utilisée par la Web pixel API (de 0 à 1, 0.9 par défaut).
+Browser.ServerBrowser.Settings.omeroServerAddress = Adresse du serveur OMERO (ICE)
+Browser.ServerBrowser.Settings.omeroServerAddressDescription = L'adresse de l'instance omero.server (ICE) (qui peut être différente de l'instance omero.web). Ce paramètre ne doit être spécifié que si l'importation d'une image avec l'Ice API ne fonctionne pas.
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Annuler
 Browser.ServerBrowser.Settings.apply = Appliquer
