Remember enable unauthenticated user in core + gui

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -105,9 +105,6 @@ Browser.BrowserCommand.alreadyCreating = Une connection vers {0} est déjà en t
 Browser.BrowserCommand.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 Browser.BrowserCommand.webServer = Serveur web
 
-Browser.NewConnectionOptions.title = Nouvelle connection
-Browser.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
-
 Browser.ServerBrowser.omeroWebServer = Serveur web OMERO
 Browser.ServerBrowser.server = Serveur:
 Browser.ServerBrowser.username = Nom d'utilisateur:
@@ -313,13 +310,11 @@ ConnectionsManager.Connection.connectDescription = Tente de se connecter à ce s
 ConnectionsManager.Connection.disconnect = Se déconnecter
 ConnectionsManager.Connection.disconnectDescription = Se déconnecter de ce serveur
 ConnectionsManager.Connection.removeDescription = Se déconnecter de ce serveur et le supprimer de cette liste
+ConnectionsManager.Connection.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Connexion réussie: {0} ("{1}")
 ConnectionsManager.Connection.logoutSuccessful = Déconnection du compte actuel réussie
 ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Déconnection du compte actuel réussie, mais la création d'une connexion non authentifiée à ce serveur a échoué
-
-ConnectionsManager.NewConnectionOptions.title = Nouvelle connection
-ConnectionsManager.NewConnectionOptions.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
 
 ConnectionsManager.ConnectionManager.noClients = Aucun client
 ConnectionsManager.ConnectionManager.webClients = Clients Web
