Renamed key-value pair annotation

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -215,7 +215,7 @@ Utilities.createProjectFirst = Si vous souhaitez ouvrir plusieurs images, vous d
 
 Web.Entities.Annotation.Comment.title = Commentaires
 Web.Entities.Annotation.File.title = Pièces jointes
-Web.Entities.Annotation.Map.title = Informations Complémentaires
+Web.Entities.Annotation.Map.title = Paires clé-valeur
 Web.Entities.Annotation.Rating.title = Notes
 Web.Entities.Annotation.Tag.title = Mots clés
 
