Started attachment refactoring

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -18,12 +18,10 @@ DataTransporters.Forms.KeyValues.keepExisting = Conserver les valeurs existantes
 DataTransporters.Forms.KeyValues.replaceExisting = Remplacer les valeurs existantes
 DataTransporters.Forms.KeyValues.deleteAll = Supprimer toutes les valeurs existantes
 
-DataTransporters.Forms.SendAnnotations.selectAnnotationsOptions = Sélectionnez les options d'exportation des annotations:
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les annotations déjà présentes
 DataTransporters.Forms.SendAnnotations.send = Envoyer:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Seulement les annotations sélectionnées
 DataTransporters.Forms.SendAnnotations.allAnnotations = Toutes les annotations
-DataTransporters.Forms.SendAnnotations.selectMeasurementsOptions = Sélectionnez les options d'exportation des mesures:
 DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures déjà présentes
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Les mesures des annotations
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Les mesures des détections
@@ -66,7 +64,7 @@ DataTransporters.AnnotationsSender.operationFailed = Opération ratée: {0}.
 DataTransporters.AnnotationsSender.deleteExistingMeasurements = Supprimer les mesures existantes
 DataTransporters.AnnotationsSender.sendAnnotationMeasurements = Envoyer les mesures des annotations
 DataTransporters.AnnotationsSender.sendDetectionMeasurements = Envoyer les mesures des détections
-DataTransporters.AnnotationsSender.notAllOperationsSucceeded = Des opérations ont échoué. Avez-vous les droits suffisants ? Si des mesures sont envoyées, est-ce qu'il y a bien un projet ouvert dans QuPath?
+DataTransporters.AnnotationsSender.notAllOperationsSucceeded = Des opérations ont échoué. Avez-vous les droits suffisants ?
 DataTransporters.AnnotationsSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
 
 DataTransporters.ImageSettingsSender.sendImageSettings = Envoyer des paramètres de l'image
