Started requests refactoring

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -141,7 +141,7 @@ Browser.ServerBrowser.loadingOrphanedImages = Chargement d'images orphelines
 Browser.ServerBrowser.noElementSelected = Aucun élément sélectionné
 Browser.ServerBrowser.multipleElementsSelected = Plusieurs éléments sélectionnés
 Browser.ServerBrowser.cantDisplayInformation = Impossible d'afficher les informations d'un object
-Browser.ServerBrowser.errorWhenFetchingInformation = Erreur lors de la récupération des informations de {0}
+Browser.ServerBrowser.errorWhenFetchingInformation = Erreur lors de la récupération des informations de {0}: {1}
 
 Browser.ServerBrowser.Settings.title = Paramètres
 Browser.ServerBrowser.Settings.webAPI = API web
