Requests refactoring continued

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -171,6 +171,7 @@ Browser.ServerBrowser.AdvancedInformation.addedOwnedType = Ajouté par: {0}\nApp
 Browser.ServerBrowser.AdvancedInformation.bytes = octets
 
 Browser.ServerBrowser.AdvancedSearch.search = Recherche
+Browser.ServerBrowser.AdvancedSearch.errorOccurred = Une erreur s'est produite: {0}
 Browser.ServerBrowser.AdvancedSearch.import = Importer
 Browser.ServerBrowser.AdvancedSearch.importObjects = Importer des objets OMERO
 Browser.ServerBrowser.AdvancedSearch.query = Requête
