--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -100,6 +100,7 @@ Browser.BrowserCommand.invalidURI = Impossible de se connecter à {0}.\n\n{0} n'
 Browser.BrowserCommand.alreadyCreating = Une connection vers {0} est déjà en train d'être établie. Merci de patienter quelques secondes.
 Browser.BrowserCommand.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 Browser.BrowserCommand.webServer = Serveur web
+Browser.BrowserCommand.gatheringInformation = Récupération d'informations sur {0}...
 
 Browser.ServerBrowser.omeroWebServer = Serveur web OMERO
 Browser.ServerBrowser.server = Serveur:
@@ -113,6 +114,7 @@ Browser.ServerBrowser.logoutDescription = Se déconnecter du compte actuel et es
 Browser.ServerBrowser.logoutSuccessful = Déconnection du compte actuel réussie
 Browser.ServerBrowser.openedImages = Images ouvertes:
 Browser.ServerBrowser.pixelAPI = Pixel API:
+Browser.ServerBrowser.publicUser = Utilisateur public
 Browser.ServerBrowser.accessRawPixels = Accès aux valeurs brutes des pixels
 Browser.ServerBrowser.noAccessRawPixels = Pas d'accès aux valeurs brutes des pixels
 Browser.ServerBrowser.settings = Paramètres
@@ -316,3 +318,14 @@ ConnectionsManager.ConnectionManager.noClients = Aucun client
 ConnectionsManager.ConnectionManager.webClients = Clients Web
 
 ConnectionsManager.Image.unreachableImage = Image inaccessible (accès non autorisé)
+
+Login.LoginForm.connecting = Connexion en cours...
+Login.LoginForm.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
+Login.LoginForm.createConnection = Créer une connexion avec un nouveau serveur OMERO
+Login.LoginForm.webServerUrl = URL du serveur Web OMERO
+Login.LoginForm.logInPublicUser = Se connecter en tant qu'utilisateur public
+Login.LoginForm.username = Nom d'utilisateur
+Login.LoginForm.password = Mot de passe
+Login.LoginForm.connect = Se connecter
+
+Login.WaitingWindow.cancel = Annuler
