--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -87,31 +87,17 @@ DataTransporters.KeyValuesSender.keyValuesNotSent = Les paires clé-valeur n'ont
 
 Browser.BrowseMenu.browseServer = Parcourir le serveur...
 Browser.BrowseMenu.newServer = Nouveau serveur...
-Browser.BrowseMenu.enterURL = Entrez l'URL
-Browser.BrowseMenu.webServer = Serveur web
-Browser.BrowseMenu.invalidURI = Impossible de se connecter à {0}.\n\n{0} n'est pas une URL valide.
-Browser.BrowseMenu.alreadyCreating = Une connection vers {0} est déjà en train d'être établie. Merci de patienter quelques secondes.
-Browser.BrowseMenu.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 
-Browser.NewServer.enterOmeroUrlToBrowse = Entrez l'URL d'un serveur OMERO (par exemple https://idr.openmicroscopy.org/):
-Browser.NewServer.enterOmeroUrl = Entrez l'URL d'un serveur OMERO
-
-Browser.BrowserCommand.invalidURI = Impossible de se connecter à {0}.\n\n{0} n'est pas une URL valide.
-Browser.BrowserCommand.alreadyCreating = Une connection vers {0} est déjà en train d'être établie. Merci de patienter quelques secondes.
-Browser.BrowserCommand.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
-Browser.BrowserCommand.webServer = Serveur web
 Browser.BrowserCommand.gatheringInformation = Récupération d'informations sur {0}...
 
 Browser.ServerBrowser.omeroWebServer = Serveur web OMERO
 Browser.ServerBrowser.server = Serveur:
 Browser.ServerBrowser.username = Nom d'utilisateur:
 Browser.ServerBrowser.login = S'authentifier
+Browser.ServerBrowser.closeImages = Vous devez d'abord fermer les images de ce serveur!
 Browser.ServerBrowser.loginDescription = Tente de s'authentifier à ce serveur
-Browser.ServerBrowser.loginSuccessful = Authentification réussie : {0} ("{1}")
-Browser.ServerBrowser.loginFailed = L'authentification a échouée.
 Browser.ServerBrowser.logout = Se déconnecter du compte actuel
 Browser.ServerBrowser.logoutDescription = Se déconnecter du compte actuel et essayer de créer une connexion non authentifiée à ce serveur
-Browser.ServerBrowser.logoutSuccessful = Déconnection du compte actuel réussie
 Browser.ServerBrowser.openedImages = Images ouvertes:
 Browser.ServerBrowser.pixelAPI = Pixel API:
 Browser.ServerBrowser.publicUser = Utilisateur public
@@ -202,11 +188,6 @@ Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Nombre de canaux non supp
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Type de pixel non supporté
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API non disponible
 
-Web.Apis.Authenticators.username = Nom d'utilisateur
-Web.Apis.Authenticators.password = Mot de passe
-Web.Apis.Authenticator.login = Connexion
-Web.Apis.Authenticator.enterLoginDetails = Veuillez entrer vos informations de connexion
-
 Utilities.noImages = Pas d'images
 Utilities.noValidImagesInSelected = Aucune image valide trouvée dans les éléments sélectionnés!
 Utilities.openImages = Ouvrir les images
@@ -285,11 +266,9 @@ Web.Entities.Permissions.Owner.allMembers = Tous les membres
 
 ConnectionsManager.Command.manageServerConnections = Gérer les connexions au serveur
 
-ConnectionsManager.Connection.webServer = Serveur Web
-ConnectionsManager.Connection.invalidURI = Impossible de se connecter à {0}.\n\n{0} n'est pas une URL valide.
-ConnectionsManager.Connection.alreadyCreating = Une connection vers {0} est déjà en train d'être établie. Merci de patienter quelques secondes.
-ConnectionsManager.Connection.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
-ConnectionsManager.Connection.connectedTo = Connecté à {0}.
+ConnectionsManager.Connection.omeroServer = Serveur OMERO
+ConnectionsManager.Connection.connectedTo = Connecté à {0} avec {1}.
+ConnectionsManager.Connection.publicUser = l'utilisateur public
 ConnectionsManager.Connection.removeClient = Supprimer
 ConnectionsManager.Connection.closeImages = Vous devez d'abord fermer les images de ce serveur!
 ConnectionsManager.Connection.removeClientConfirmation = Ce serveur sera supprimé de la liste des serveurs actifs.
@@ -301,18 +280,12 @@ ConnectionsManager.Connection.browse = Parcourir
 ConnectionsManager.Connection.browseDescription = Parcourir les fichiers de ce serveur
 ConnectionsManager.Connection.login = S'authentifier
 ConnectionsManager.Connection.loginDescription = Tente de s'authentifier à ce serveur
-ConnectionsManager.Connection.logout = Se déconnecter du compte actuel
-ConnectionsManager.Connection.logoutDescription = Se déconnecter du compte actuel et essayer de créer une connexion non authentifiée à ce serveur
 ConnectionsManager.Connection.connect = Se connecter
 ConnectionsManager.Connection.connectDescription = Tente de se connecter à ce serveur
 ConnectionsManager.Connection.disconnect = Se déconnecter
 ConnectionsManager.Connection.disconnectDescription = Se déconnecter de ce serveur
 ConnectionsManager.Connection.removeDescription = Se déconnecter de ce serveur et le supprimer de cette liste
-ConnectionsManager.Connection.skipAuthentication = Est-ce qu'il faut passer l'authentification si le serveur le permet
 ConnectionsManager.Connection.noImage = 0 image
-ConnectionsManager.Connection.loginSuccessful = Connexion réussie: {0} ("{1}")
-ConnectionsManager.Connection.logoutSuccessful = Déconnection du compte actuel réussie
-ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Déconnection du compte actuel réussie, mais la création d'une connexion non authentifiée à ce serveur a échoué
 
 ConnectionsManager.ConnectionManager.noClients = Aucun client
 ConnectionsManager.ConnectionManager.webClients = Clients Web
