Separate ROI deletion and addition into two requests

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -61,6 +61,7 @@ DataTransporters.AnnotationsSender.dataToSend = Données à envoyer
 DataTransporters.AnnotationsSender.noAnnotations = Aucune annotation à envoyer!
 DataTransporters.AnnotationsSender.operationSucceeded = Opération réussie: {0}.
 DataTransporters.AnnotationsSender.operationFailed = Opération ratée: {0}.
+DataTransporters.AnnotationsSender.deleteExistingAnnotations = Supprimer les annotations existantes
 DataTransporters.AnnotationsSender.deleteExistingMeasurements = Supprimer les mesures existantes
 DataTransporters.AnnotationsSender.sendAnnotationMeasurements = Envoyer les mesures des annotations
 DataTransporters.AnnotationsSender.sendDetectionMeasurements = Envoyer les mesures des détections
