Allow importing / sending annotations from particular user

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -9,26 +9,30 @@ DataTransporters.Forms.ImageSettings.channelNames = Nom des canaux
 DataTransporters.Forms.ImageSettings.channelColors =  Couleur des canaux
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Plages d'affichage des canaux
 
-DataTransporters.Forms.ImportAnnotations.selectImportOptions = Sélectionnez les options d'importation:
-DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Supprimer les annotations actuelles
-DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Supprimer les détections actuelles
+DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Importer les annotations de
+DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Supprimer les annotations QuPath actuelles
+DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Supprimer les détections QuPath actuelles
 
 DataTransporters.Forms.KeyValues.selectUpdateOptions = Sélectionnez une option:
 DataTransporters.Forms.KeyValues.keepExisting = Conserver les valeurs existantes
 DataTransporters.Forms.KeyValues.replaceExisting = Remplacer les valeurs existantes
 DataTransporters.Forms.KeyValues.deleteAll = Supprimer toutes les valeurs existantes
 
-DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les annotations déjà présentes
+DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les annotations OMERO déjà présentes de
 DataTransporters.Forms.SendAnnotations.send = Envoyer:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Seulement les annotations sélectionnées
 DataTransporters.Forms.SendAnnotations.allAnnotations = Toutes les annotations
-DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures déjà présentes
+DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures OMERO déjà présentes
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Les mesures des annotations
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Les mesures des détections
 
 DataTransporters.AnnotationsImporter.importAnnotations = Importer des annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
+DataTransporters.AnnotationsImporter.retrievingServer = Récupération d'informations sur le serveur...
+DataTransporters.AnnotationsImporter.serverError = Erreur de serveur
+DataTransporters.AnnotationsImporter.cannotGetServerInformation = Impossible d'obtenir les informations du serveur de {0}
 DataTransporters.AnnotationsImporter.dataToSend = Données à envoyer
+DataTransporters.AnnotationsImporter.importingAnnotations = Importation des annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = Aucune annotation
 DataTransporters.AnnotationsImporter.noAnnotationsFound = Aucune annotation n'a été trouvée, ou une erreur s'est produite lors de leur récupération.
 DataTransporters.AnnotationsImporter.currentAnnotationsDeleted = Les annotations actuelles ont été supprimées.
@@ -40,6 +44,7 @@ DataTransporters.AnnotationsImporter.XAnnotationImported = {0} annotations ont b
 DataTransporters.ImageSettingsImporter.importImageSettings = Importer des paramètres de l'image
 DataTransporters.ImageSettingsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
 DataTransporters.ImageSettingsImporter.dataToSend = Données à envoyer
+DataTransporters.ImageSettingsImporter.importingAnnotations = Importation des paramètres de l'image en cours...
 DataTransporters.ImageSettingsImporter.couldNotGetImage = Impossible de récupérer les paramètres de l'image.
 DataTransporters.ImageSettingsImporter.imageNameUpdated = Nom de l'image mis à jour.
 DataTransporters.ImageSettingsImporter.imageNameNotUpdated = Le nom de l'image n'a pas été modifié: l'image doit faire partie d'un projet.
@@ -51,6 +56,7 @@ DataTransporters.ImageSettingsImporter.channelDisplayRangesUpdated = Plages d'af
 DataTransporters.ImageSettingsImporter.channelDisplayRangesNotUpdated = Les plages d'affichage des canaux n'ont pas été modifiés. Le nombre de canaux renvoyés par le serveur OMERO ne correspond pas au nombre de canaux de l'image.
 
 DataTransporters.KeyValuesImporter.importKeyValues = Importer des paires clé-valeur
+DataTransporters.KeyValuesImporter.importingKeyValues = Importation de paires clé-valeur en cours...
 DataTransporters.KeyValuesImporter.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
 DataTransporters.KeyValuesImporter.couldNotRetrieveAnnotations = Impossible de récupérer les annotations stockées sur le serveur OMERO.
@@ -58,6 +64,10 @@ DataTransporters.KeyValuesImporter.keyValuesImported = Paires clé-valeur import
 
 DataTransporters.AnnotationsSender.sendAnnotations = Envoyer des annotations
 DataTransporters.AnnotationsSender.dataToSend = Données à envoyer
+DataTransporters.AnnotationsSender.retrievingServer = Récupération des informations du serveur...
+DataTransporters.AnnotationsSender.serverError = Erreur de serveur
+DataTransporters.AnnotationsSender.cannotGetServerInformation = Impossible d'obtenir les informations du serveur de {0}
+DataTransporters.AnnotationsSender.sendingAnnotations = Envoi d'annotations en cours...
 DataTransporters.AnnotationsSender.noAnnotations = Aucune annotation à envoyer!
 DataTransporters.AnnotationsSender.operationSucceeded = Opération réussie: {0}.
 DataTransporters.AnnotationsSender.operationFailed = Opération ratée: {0}.
@@ -71,6 +81,7 @@ DataTransporters.AnnotationsSender.notFromOMERO = L'image actuelle ne provient p
 DataTransporters.ImageSettingsSender.sendImageSettings = Envoyer des paramètres de l'image
 DataTransporters.ImageSettingsSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
 DataTransporters.ImageSettingsSender.dataToSend = Données à envoyer
+DataTransporters.ImageSettingsSender.sendingImageSettings = Envoie des paramètres de l'image en cours...
 DataTransporters.ImageSettingsSender.parameterSent = Le paramètre "{0}" a bien été envoyé.
 DataTransporters.ImageSettingsSender.parameterNotSent = Le paramètre "{0}" n'a pas été envoyé.
 DataTransporters.ImageSettingsSender.notAllParametersSent = Certains paramètres n'ont pas pu être envoyés. Avez-vous les droits suffisants ?
@@ -80,6 +91,7 @@ DataTransporters.ImageSettingsSender.channelColors = couleur des canaux
 DataTransporters.ImageSettingsSender.channelDisplayRanges = plages d'affichage des canaux
 
 DataTransporters.KeyValuesSender.sendKeyValues = Envoyer des paires clé-valeur
+DataTransporters.KeyValuesSender.sendingKeyValues = Envoie des paires clé-valeur en cours...
 DataTransporters.KeyValuesSender.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO!
 DataTransporters.KeyValuesSender.noValues = L'image actuelle ne contient aucune paire clé-valeur.
