--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -59,8 +59,12 @@ DataTransporters.KeyValuesImporter.importKeyValues = Importer des paires clé-va
 DataTransporters.KeyValuesImporter.importingKeyValues = Importation de paires clé-valeur en cours...
 DataTransporters.KeyValuesImporter.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
-DataTransporters.KeyValuesImporter.couldNotRetrieveAnnotations = Impossible de récupérer les annotations stockées sur le serveur OMERO.
+DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Impossible de récupérer les paires clé-valeur stockées sur le serveur OMERO.
+DataTransporters.KeyValuesImporter.noKeyValuePairFound = Aucune paire clé-valeur trouvée sur le serveur OMERO
 DataTransporters.KeyValuesImporter.keyValuesImported = Paires clé-valeur importées dans l'image QuPath.
+DataTransporters.KeyValuesImporter.nokeyValuesAdded = Aucune paire clé-valeur n'a été ajoutée à l'image QuPath actuelle.
+DataTransporters.KeyValuesImporter.followingKeyValuesAdded = Les paires clé-valeur suivantes ont été ajoutées à l'image QuPath actuelle :\n{0}.
+DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = Les paires clé-valeur suivantes n'ont pas été ajoutées à l'image QuPath actuelle en raison de doublons :\n{0}.
 
 DataTransporters.AnnotationsSender.sendAnnotations = Envoyer des annotations
 DataTransporters.AnnotationsSender.dataToSend = Données à envoyer
@@ -201,82 +205,6 @@ Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Nombre de canaux non supp
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Type de pixel non supporté
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API non disponible
 
-Utilities.noImages = Pas d'images
-Utilities.noValidImagesInSelected = Aucune image valide trouvée dans les éléments sélectionnés !
-Utilities.openImages = Ouvrir les images
-Utilities.createProjectFirst = Si vous souhaitez ouvrir plusieurs images, vous devez d'abord créer un projet.
-
-Web.Entities.Annotation.Comment.title = Commentaires
-Web.Entities.Annotation.File.title = Pièces jointes
-Web.Entities.Annotation.Map.title = Paires clé-valeur
-Web.Entities.Annotation.Rating.title = Notes
-Web.Entities.Annotation.Tag.title = Mots clés
-
-Web.Entities.Image.name = Nom
-Web.Entities.Image.id = Id
-Web.Entities.Image.owner = Propriétaire
-Web.Entities.Image.group = Groupe
-Web.Entities.Image.acquisitionDate = Date d'acquisition
-Web.Entities.Image.imageWidth = Largeur de l'image
-Web.Entities.Image.imageHeight = Hauteur de l'image
-Web.Entities.Image.uncompressedSize = Taille (non compressée)
-Web.Entities.Image.nbChannels = Nb de canaux
-Web.Entities.Image.nbZSlices = Nb de tranches z
-Web.Entities.Image.nbTimePoints = Nb de points de temps
-Web.Entities.Image.pixelSizeX = Taille des pixels X
-Web.Entities.Image.pixelSizeY = Taille des pixels Y
-Web.Entities.Image.pixelSizeZ = Taille des pixels Z
-Web.Entities.Image.pixelType = Type de pixels
-
-Web.Entities.Dataset.name = Nom
-Web.Entities.Dataset.id = Id
-Web.Entities.Dataset.description = Description
-Web.Entities.Dataset.owner = Propriétaire
-Web.Entities.Dataset.group = Groupe
-Web.Entities.Dataset.nbImages = Nb d'images
-
-Web.Entities.Project.name = Nom
-Web.Entities.Project.id = Id
-Web.Entities.Project.description = Description
-Web.Entities.Project.owner = Propriétaire
-Web.Entities.Project.group = Groupe
-Web.Entities.Project.nbDatasets = Nb de datasets
-
-Web.Entities.Well.name = Nom
-Web.Entities.Well.id = Id
-Web.Entities.Well.owner = Propriétaire
-Web.Entities.Well.group = Groupe
-Web.Entities.Well.column = Colonne
-Web.Entities.Well.row = Ligne
-
-Web.Entities.PlateAcquisition.name = Nom
-Web.Entities.PlateAcquisition.id = Id
-Web.Entities.PlateAcquisition.owner = Propriétaire
-Web.Entities.PlateAcquisition.group = Groupe
-Web.Entities.PlateAcquisition.acquisitionTime = Date d'acquisition
-
-Web.Entities.Plate.name = Nom
-Web.Entities.Plate.id = Id
-Web.Entities.Plate.owner = Propriétaire
-Web.Entities.Plate.group = Groupe
-Web.Entities.Plate.columns = Colonnes
-Web.Entities.Plate.rows = Lignes
-
-Web.Entities.Screen.name = Nom
-Web.Entities.Screen.id = Id
-Web.Entities.Screen.description = Description
-Web.Entities.Screen.owner = Propriétaire
-Web.Entities.Screen.group = Groupe
-Web.Entities.Screen.nbPlates = Nb de plates
-
-Web.Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Images orphelines
-
-Web.Entities.RepositoryEntities.Server.server = Serveur
-
-Web.Entities.Permissions.Group.allGroups = Tous les groupes
-
-Web.Entities.Permissions.Owner.allMembers = Tous les membres
-
 ConnectionsManager.Command.manageServerConnections = Gérer les connexions au serveur
 
 ConnectionsManager.Connection.omeroServer = Serveur OMERO
@@ -305,8 +233,9 @@ ConnectionsManager.ConnectionManager.webClients = Clients Web
 
 ConnectionsManager.Image.unreachableImage = Image inaccessible (accès non autorisé)
 
-Login.LoginForm.connecting = Connexion en cours...
-Login.LoginForm.connectionFailed = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
+Login.LoginForm.connectingTo = Connexion vers {0} en cours...
+Login.LoginForm.connectionFailed = La connexion a échoué
+Login.LoginForm.connectionFailedCheck = Impossible de se connecter à {0}.\n\nVérifiez les informations suivantes:\n- Identifiants valides.\n- Droits d'accès.\n- URL correcte.
 Login.LoginForm.createConnection = Créer une connexion avec un nouveau serveur OMERO
 Login.LoginForm.webServerUrl = URL du serveur Web OMERO
 Login.LoginForm.logInPublicUser = Se connecter en tant qu'utilisateur public
@@ -315,3 +244,79 @@ Login.LoginForm.password = Mot de passe
 Login.LoginForm.connect = Se connecter
 
 Login.WaitingWindow.cancel = Annuler
+
+UiUtilities.noImages = Pas d'images
+UiUtilities.noValidImagesInSelected = Aucune image valide trouvée dans les éléments sélectionnés !
+UiUtilities.openImages = Ouvrir les images
+UiUtilities.createProjectFirst = Si vous souhaitez ouvrir plusieurs images, vous devez d'abord créer un projet.
+
+Entities.Annotation.Comment.title = Commentaires
+Entities.Annotation.File.title = Pièces jointes
+Entities.Annotation.Map.title = Paires clé-valeur
+Entities.Annotation.Rating.title = Notes
+Entities.Annotation.Tag.title = Mots clés
+
+Entities.Image.name = Nom
+Entities.Image.id = Id
+Entities.Image.owner = Propriétaire
+Entities.Image.group = Groupe
+Entities.Image.acquisitionDate = Date d'acquisition
+Entities.Image.imageWidth = Largeur de l'image
+Entities.Image.imageHeight = Hauteur de l'image
+Entities.Image.uncompressedSize = Taille (non compressée)
+Entities.Image.nbChannels = Nb de canaux
+Entities.Image.nbZSlices = Nb de tranches z
+Entities.Image.nbTimePoints = Nb de points de temps
+Entities.Image.pixelSizeX = Taille des pixels X
+Entities.Image.pixelSizeY = Taille des pixels Y
+Entities.Image.pixelSizeZ = Taille des pixels Z
+Entities.Image.pixelType = Type de pixels
+
+Entities.Dataset.name = Nom
+Entities.Dataset.id = Id
+Entities.Dataset.description = Description
+Entities.Dataset.owner = Propriétaire
+Entities.Dataset.group = Groupe
+Entities.Dataset.nbImages = Nb d'images
+
+Entities.Project.name = Nom
+Entities.Project.id = Id
+Entities.Project.description = Description
+Entities.Project.owner = Propriétaire
+Entities.Project.group = Groupe
+Entities.Project.nbDatasets = Nb de datasets
+
+Entities.Well.name = Nom
+Entities.Well.id = Id
+Entities.Well.owner = Propriétaire
+Entities.Well.group = Groupe
+Entities.Well.column = Colonne
+Entities.Well.row = Ligne
+
+Entities.PlateAcquisition.name = Nom
+Entities.PlateAcquisition.id = Id
+Entities.PlateAcquisition.owner = Propriétaire
+Entities.PlateAcquisition.group = Groupe
+Entities.PlateAcquisition.acquisitionTime = Date d'acquisition
+
+Entities.Plate.name = Nom
+Entities.Plate.id = Id
+Entities.Plate.owner = Propriétaire
+Entities.Plate.group = Groupe
+Entities.Plate.columns = Colonnes
+Entities.Plate.rows = Lignes
+
+Entities.Screen.name = Nom
+Entities.Screen.id = Id
+Entities.Screen.description = Description
+Entities.Screen.owner = Propriétaire
+Entities.Screen.group = Groupe
+Entities.Screen.nbPlates = Nb de plates
+
+Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Images orphelines
+
+Entities.RepositoryEntities.Server.server = Serveur
+
+Entities.Permissions.Group.allGroups = Tous les groupes
+
+Entities.Permissions.Owner.allMembers = Tous les membres
