--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -1,7 +1,9 @@
 Extension.name = OMERO extension
 Extension.description = Ajoute la possibilité de parcourir un serveur OMERO et d'ouvrir les images hébergées dessus.
-Extension.importFromOMERO = Importer depuis OMERO
 Extension.sendToOMERO = Envoyer vers OMERO
+Extension.importFromOMERO = Importer depuis OMERO
+Extension.automaticallyImport = Importer automatiquement les paires clé-valeur et les informations du dataset parent
+Extension.automaticallyImportWhenAddingImage = Importer automatiquement les paires clé-valeur et les informations du dataset parent lors de l'ajout d'une image OMERO à un projet QuPath
 
 DataTransporters.Forms.ImageSettings.selectUpdate = Sélectionnez les éléments à mettre à jour :
 DataTransporters.Forms.ImageSettings.imageName = Nom de l'image
