--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -217,6 +217,7 @@ ConnectionsManager.Connection.closeImages = Vous devez d'abord fermer les images
 ConnectionsManager.Connection.removeClientConfirmation = Ce serveur sera supprimé de la liste des serveurs actifs.
 ConnectionsManager.Connection.disconnectClient = Se déconnecter du serveur
 ConnectionsManager.Connection.disconnectClientConfirmation = La connection va être stoppée.
+ConnectionsManager.Connection.disconnectingFrom = Déconnexion de {0} en cours...
 ConnectionsManager.Connection.image = image
 ConnectionsManager.Connection.images = images
 ConnectionsManager.Connection.browse = Parcourir
