Add namespace option when importing KVP

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -15,6 +15,11 @@ DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Importer les an
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Supprimer les annotations QuPath actuelles
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Supprimer les détections QuPath actuelles
 
+DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces = Sélectionnez les espaces de noms à importer :
+DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Conserver les paires clé-valeur existantes
+DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Remplacer les paires clé-valeur existantes
+DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Supprimer toutes les paires clé-valeur existantes
+
 DataTransporters.Forms.KeyValues.selectUpdateOptions = Sélectionnez une option :
 DataTransporters.Forms.KeyValues.keepExisting = Conserver les valeurs existantes
 DataTransporters.Forms.KeyValues.replaceExisting = Remplacer les valeurs existantes
@@ -58,9 +63,9 @@ DataTransporters.ImageSettingsImporter.channelDisplayRangesUpdated = Plages d'af
 DataTransporters.ImageSettingsImporter.channelDisplayRangesNotUpdated = Les plages d'affichage des canaux n'ont pas été modifiés. Le nombre de canaux renvoyés par le serveur OMERO ne correspond pas au nombre de canaux de l'image.
 
 DataTransporters.KeyValuesImporter.importKeyValues = Importer des paires clé-valeur
-DataTransporters.KeyValuesImporter.importingKeyValues = Importation de paires clé-valeur en cours...
 DataTransporters.KeyValuesImporter.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
+DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Obtention des paires clé-valeur...
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Impossible de récupérer les paires clé-valeur stockées sur le serveur OMERO.
 DataTransporters.KeyValuesImporter.noKeyValuePairFound = Aucune paire clé-valeur trouvée sur le serveur OMERO
 DataTransporters.KeyValuesImporter.keyValuesImported = Paires clé-valeur importées dans l'image QuPath.
