UI for sending KVP with namespace

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -20,11 +20,6 @@ DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Conserver les paires c
 DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Remplacer les paires clé-valeur existantes
 DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Supprimer toutes les paires clé-valeur existantes
 
-DataTransporters.Forms.KeyValues.selectUpdateOptions = Sélectionnez une option :
-DataTransporters.Forms.KeyValues.keepExisting = Conserver les valeurs existantes
-DataTransporters.Forms.KeyValues.replaceExisting = Remplacer les valeurs existantes
-DataTransporters.Forms.KeyValues.deleteAll = Supprimer toutes les valeurs existantes
-
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les annotations OMERO déjà présentes de
 DataTransporters.Forms.SendAnnotations.send = Envoyer :
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Seulement les annotations sélectionnées
@@ -32,6 +27,15 @@ DataTransporters.Forms.SendAnnotations.allAnnotations = Toutes les annotations
 DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures OMERO déjà présentes
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Les mesures des annotations
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Les mesures des détections
+
+DataTransporters.Forms.SendKeyValuePairs.available = Disponible
+DataTransporters.Forms.SendKeyValuePairs.selected = Sélectionnés
+DataTransporters.Forms.SendKeyValuePairs.new = Nouveau :
+DataTransporters.Forms.SendKeyValuePairs.selectKeyValuePairs = Sélectionnez les paires clé-valeur à envoyer :
+DataTransporters.Forms.SendKeyValuePairs.namespace = Espace de noms :
+DataTransporters.Forms.SendKeyValuePairs.newNamespace = Nouvel espace de noms
+DataTransporters.Forms.SendKeyValuePairs.keepExisting = Conserver les paires clé-valeur existantes
+DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Remplacer les paires clé-valeur existantes
 
 DataTransporters.AnnotationsImporter.importAnnotations = Importer des annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
@@ -106,6 +110,7 @@ DataTransporters.KeyValuesSender.sendingKeyValues = Envoie des paires clé-valeu
 DataTransporters.KeyValuesSender.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
 DataTransporters.KeyValuesSender.noValues = L'image actuelle ne contient aucune paire clé-valeur.
+DataTransporters.KeyValuesSender.gettingExistingNamespaces = Obtention des espaces de noms existants...
 DataTransporters.KeyValuesSender.keyValuesSent = Les paires clé-valeur ont bien été envoyées vers le serveur.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Les paires clé-valeur n'ont pas été envoyées vers le serveur.\nAvez-vous les droits suffisants ?
 
