--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -71,7 +71,7 @@ DataTransporters.KeyValuesImporter.projectNotOpened = Un projet doit être ouver
 DataTransporters.KeyValuesImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
 DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Obtention des paires clé-valeur...
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Impossible de récupérer les paires clé-valeur stockées sur le serveur OMERO.
-DataTransporters.KeyValuesImporter.noKeyValuePairFound = Aucune paire clé-valeur trouvée sur le serveur OMERO
+DataTransporters.KeyValuesImporter.noKeyValuePairFound = Aucune paire clé-valeur trouvée sur le serveur OMERO.
 DataTransporters.KeyValuesImporter.keyValuesImported = Paires clé-valeur importées dans l'image QuPath.
 DataTransporters.KeyValuesImporter.nokeyValuesAdded = Aucune paire clé-valeur n'a été ajoutée à l'image QuPath actuelle.
 DataTransporters.KeyValuesImporter.followingKeyValuesAdded = Les paires clé-valeur suivantes ont été ajoutées à l'image QuPath actuelle :\n{0}.
