Add default namespace

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -19,6 +19,7 @@ DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces = Sélectionnez les 
 DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Conserver les paires clé-valeur existantes
 DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Remplacer les paires clé-valeur existantes
 DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Supprimer toutes les paires clé-valeur existantes
+DataTransporters.Forms.ImportKeyValuePairs.default = Espace de nom par défaut
 
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les annotations OMERO déjà présentes de
 DataTransporters.Forms.SendAnnotations.send = Envoyer :
