--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -43,7 +43,6 @@ DataTransporters.AnnotationsImporter.notFromOMERO = L'image actuelle ne provient
 DataTransporters.AnnotationsImporter.retrievingServer = Récupération d'informations sur le serveur...
 DataTransporters.AnnotationsImporter.serverError = Erreur de serveur
 DataTransporters.AnnotationsImporter.cannotGetServerInformation = Impossible d'obtenir les informations du serveur de {0}
-DataTransporters.AnnotationsImporter.dataToSend = Données à envoyer
 DataTransporters.AnnotationsImporter.importingAnnotations = Importation des annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = Aucune annotation
 DataTransporters.AnnotationsImporter.noAnnotationsFound = Aucune annotation n'a été trouvée, ou une erreur s'est produite lors de leur récupération.
@@ -55,7 +54,6 @@ DataTransporters.AnnotationsImporter.XAnnotationImported = {0} annotations ont b
 
 DataTransporters.ImageSettingsImporter.importImageSettings = Importer des paramètres de l'image
 DataTransporters.ImageSettingsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
-DataTransporters.ImageSettingsImporter.dataToSend = Données à envoyer
 DataTransporters.ImageSettingsImporter.importingAnnotations = Importation des paramètres de l'image en cours...
 DataTransporters.ImageSettingsImporter.couldNotGetImage = Impossible de récupérer les paramètres de l'image.
 DataTransporters.ImageSettingsImporter.imageNameUpdated = Nom de l'image mis à jour.
@@ -74,7 +72,7 @@ DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Obtention des paires c
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Impossible de récupérer les paires clé-valeur stockées sur le serveur OMERO.
 DataTransporters.KeyValuesImporter.noKeyValuePairFound = Aucune paire clé-valeur trouvée sur le serveur OMERO.
 DataTransporters.KeyValuesImporter.keyValuesImported = Paires clé-valeur importées dans l'image QuPath.
-DataTransporters.KeyValuesImporter.nokeyValuesAdded = Aucune paire clé-valeur n'a été ajoutée à l'image QuPath actuelle.
+DataTransporters.KeyValuesImporter.noKeyValuesAdded = Aucune paire clé-valeur n'a été ajoutée à l'image QuPath actuelle.
 DataTransporters.KeyValuesImporter.followingKeyValuesAdded = Les paires clé-valeur suivantes ont été ajoutées à l'image QuPath actuelle :\n{0}.
 DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = Les paires clé-valeur suivantes n'ont pas été ajoutées à l'image QuPath actuelle en raison de doublons :\n{0}.
 
