Advanced search title

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -184,6 +184,7 @@ Browser.ServerBrowser.AdvancedInformation.addedOwned = Ajouté par: {0}\nApparti
 Browser.ServerBrowser.AdvancedInformation.addedOwnedType = Ajouté par: {0}\nAppartient à: {1}\nType: {2}
 Browser.ServerBrowser.AdvancedInformation.bytes = octets
 
+Browser.ServerBrowser.AdvancedSearch.advancedSearch = Rechercher approfondie
 Browser.ServerBrowser.AdvancedSearch.search = Recherche
 Browser.ServerBrowser.AdvancedSearch.errorOccurred = Une erreur s'est produite : {0}
 Browser.ServerBrowser.AdvancedSearch.import = Importer
