Remove apply button and improve reopening behaviour

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -171,9 +171,8 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Port du serveur
 Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer (8082 par défaut).
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Annuler
-Browser.ServerBrowser.Settings.apply = Appliquer
 Browser.ServerBrowser.Settings.saved = Paramètres enregistrés
-Browser.ServerBrowser.Settings.parametersSaved = Les paramètres ont bien été enregistrés
+Browser.ServerBrowser.Settings.parametersSaved = Les paramètres ont bien été enregistrés.
 
 Browser.ServerBrowser.AdvancedInformation.details = Détails
 Browser.ServerBrowser.AdvancedInformation.id = Id
