Better error handling

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -171,6 +171,10 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Port du serveur
 Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer (8082 par défaut).
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Annuler
+Browser.ServerBrowser.Settings.error = Erreur
+Browser.ServerBrowser.Settings.invalidJpegQuality = Qualité JPEG non valide.
+Browser.ServerBrowser.Settings.iceServerPort = Port du serveur ICE non valide.
+Browser.ServerBrowser.Settings.invalidPixelBufferMicroservicePort = Port du microservice Pixel Buffer non valide.
 Browser.ServerBrowser.Settings.saved = Paramètres enregistrés
 Browser.ServerBrowser.Settings.parametersSaved = Les paramètres ont bien été enregistrés.
 
