--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -216,6 +216,8 @@ Browser.ServerBrowser.AdvancedSearch.imported = Importé
 Browser.ServerBrowser.AdvancedSearch.group = Groupe
 Browser.ServerBrowser.AdvancedSearch.link = Lien
 
+Browser.ServerBrowser.AdvancedSearch.TypeCellFactory.couldNotRetrieveIcon = Impossible de récupérer l'icône
+
 Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Nombre de canaux non supporté
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Type de pixel non supporté
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API non disponible
