Annotation importer and sender only show owners having access to image

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -40,9 +40,9 @@ DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Remplacer les paires 
 
 DataTransporters.AnnotationsImporter.importAnnotations = Importer des annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
-DataTransporters.AnnotationsImporter.retrievingServer = Récupération d'informations sur le serveur...
+DataTransporters.AnnotationsImporter.retrievingOwners = Récupération des propriétaires ayant accès à l'image...
 DataTransporters.AnnotationsImporter.serverError = Erreur de serveur
-DataTransporters.AnnotationsImporter.cannotGetServerInformation = Impossible d'obtenir les informations du serveur de {0}
+DataTransporters.AnnotationsImporter.cannotRetrieveOwners = Impossible d'obtenir les propriétaires de {0}
 DataTransporters.AnnotationsImporter.importingAnnotations = Importation des annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = Aucune annotation
 DataTransporters.AnnotationsImporter.noAnnotationsFound = Aucune annotation n'a été trouvée, ou une erreur s'est produite lors de leur récupération.
@@ -78,9 +78,9 @@ DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = Les paires clé-
 
 DataTransporters.AnnotationsSender.sendAnnotations = Envoyer des annotations
 DataTransporters.AnnotationsSender.dataToSend = Données à envoyer
-DataTransporters.AnnotationsSender.retrievingServer = Récupération des informations du serveur...
+DataTransporters.AnnotationsSender.retrievingOwners = Récupération des propriétaires ayant accès à l'image...
 DataTransporters.AnnotationsSender.serverError = Erreur de serveur
-DataTransporters.AnnotationsSender.cannotGetServerInformation = Impossible d'obtenir les informations du serveur de {0}
+DataTransporters.AnnotationsSender.cannotRetrieveOwners = Impossible d'obtenir les propriétaires de {0}
 DataTransporters.AnnotationsSender.sendingAnnotations = Envoi d'annotations en cours...
 DataTransporters.AnnotationsSender.noAnnotations = Aucune annotation à envoyer !
 DataTransporters.AnnotationsSender.operationSucceeded = Opération réussie : {0}.
