--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -12,6 +12,7 @@ DataTransporters.Forms.ImageSettings.channelColors =  Couleur des canaux
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Plages d'affichage des canaux
 
 DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Importer les annotations de
+DataTransporters.Forms.ImportAnnotations.all = Tous
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Supprimer les annotations QuPath actuelles
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Supprimer les détections QuPath actuelles
 
@@ -40,12 +41,11 @@ DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Remplacer les paires 
 
 DataTransporters.AnnotationsImporter.importAnnotations = Importer des annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
-DataTransporters.AnnotationsImporter.retrievingOwners = Récupération des propriétaires ayant accès à l'image...
-DataTransporters.AnnotationsImporter.serverError = Erreur de serveur
-DataTransporters.AnnotationsImporter.cannotRetrieveOwners = Impossible d'obtenir les propriétaires de {0}
-DataTransporters.AnnotationsImporter.importingAnnotations = Importation des annotations...
+DataTransporters.AnnotationsImporter.retrievingAnnotations = Récupération des annotations...
+DataTransporters.AnnotationsImporter.annotationImportError = Erreur d'importation des annotations
+DataTransporters.AnnotationsImporter.cannotRetrieveAnnotations = Impossible d'obtenir les annotations de {0}. Vérifiez les logs pour plus d'information.
 DataTransporters.AnnotationsImporter.noAnnotations = Aucune annotation
-DataTransporters.AnnotationsImporter.noAnnotationsFound = Aucune annotation n'a été trouvée, ou une erreur s'est produite lors de leur récupération.
+DataTransporters.AnnotationsImporter.noAnnotationsFound = Aucune annotation n'a été trouvée.
 DataTransporters.AnnotationsImporter.currentAnnotationsDeleted = Les annotations actuelles ont été supprimées.
 DataTransporters.AnnotationsImporter.currentDetectionsDeleted = Les détections actuelles ont été supprimées.
 DataTransporters.AnnotationsImporter.1WrittenSuccessfully = Annotation écrite avec succès
