Select from which owner to delete the measurements

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -26,7 +26,7 @@ DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Supprimer les
 DataTransporters.Forms.SendAnnotations.send = Envoyer :
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Seulement les annotations sélectionnées
 DataTransporters.Forms.SendAnnotations.allAnnotations = Toutes les annotations
-DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures OMERO déjà présentes
+DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Supprimer les mesures OMERO déjà présentes de
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Les mesures des annotations
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Les mesures des détections
 
