KVP not merged when sent to OMERO

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -105,6 +105,7 @@ DataTransporters.ImageSettingsSender.channelColors = couleur des canaux
 DataTransporters.ImageSettingsSender.channelDisplayRanges = plages d'affichage des canaux
 
 DataTransporters.KeyValuesSender.sendKeyValues = Envoyer des paires clé-valeur
+DataTransporters.KeyValuesSender.noKeyValueSelected = Aucune paire clé-valeur n'a été sélectionnée !
 DataTransporters.KeyValuesSender.sendingKeyValues = Envoie des paires clé-valeur en cours...
 DataTransporters.KeyValuesSender.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
