Three attempts when sending ping + message when ping failed

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -1,3 +1,6 @@
+Utils.connectionError = Erreur de connexion
+Utils.connectionClosed = La connexion à {0} a été interrompue en raison d'un échec de ping vers le serveur. Consultez les logs pour plus d'informations.
+
 Extension.name = OMERO extension
 Extension.description = Ajoute la possibilité de parcourir un serveur OMERO et d'ouvrir les images hébergées dessus.
 Extension.sendToOMERO = Envoyer vers OMERO
