Add more logs to UI classes

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -113,6 +113,7 @@ DataTransporters.KeyValuesSender.sendingKeyValues = Envoie des paires clé-valeu
 DataTransporters.KeyValuesSender.projectNotOpened = Un projet doit être ouvert dans QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = L'image actuelle ne provient pas d'un serveur OMERO !
 DataTransporters.KeyValuesSender.noValues = L'image actuelle ne contient aucune paire clé-valeur.
+DataTransporters.KeyValuesSender.cannotGetExistingKvp = Impossible d'obtenir les paires clé-valeur existantes de l'image.
 DataTransporters.KeyValuesSender.gettingExistingNamespaces = Obtention des espaces de noms existants...
 DataTransporters.KeyValuesSender.keyValuesSent = Les paires clé-valeur ont bien été envoyées vers le serveur.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Les paires clé-valeur n'ont pas été envoyées vers le serveur.\nAvez-vous les droits suffisants ?
