Improve UI when opening images

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -265,10 +265,10 @@ Login.LoginForm.connect = Se connecter
 
 Login.WaitingWindow.cancel = Annuler
 
-UiUtilities.noImages = Pas d'images
-UiUtilities.noValidImagesInSelected = Aucune image valide trouvée dans les éléments sélectionnés !
-UiUtilities.openImages = Ouvrir les images
-UiUtilities.createProjectFirst = Si vous souhaitez ouvrir plusieurs images, vous devez d'abord créer un projet.
+ImageOpener.opening = Ouverture de {0} en cours...
+ImageOpener.fetchingInformation = Récupération d'informations sur {0}...
+ImageOpener.imageOpening = Ouverture des images
+ImageOpener.errorWhileRetrievingImage = Erreur lors de la récupération des images contenues dans {0}. Consultez les logs pour plus d'informations.
 
 Entities.Annotation.Comment.title = Commentaires
 Entities.Annotation.File.title = Pièces jointes
